Added continent info

--- a/Covid-19 Data Exploration in SQL.ipynb
+++ b/Covid-19 Data Exploration in SQL.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e166ae0",
+   "id": "f0142fb6",
    "metadata": {},
    "source": [
     "Now we gonna look at the total infected ratio compared to overall population in Bangladesh.  "
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "042b41b0",
+   "id": "a34220b6",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06d38734",
+   "id": "2dc5388c",
    "metadata": {},
    "source": [
     "In above queries we used the condition \"Continenet is not null\" in WHERE statetement is because, If we look at the dataset closely we find that the location column contain 'Africa', 'Asia', 'Europe' as a country. Only when the continent is null. To be more specific and acurate we used \"continent is not null\" in the WHERE statement.\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7ed0d9db",
+   "id": "9e00e1da",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf177670",
+   "id": "6b7575a3",
    "metadata": {},
    "source": [
     "Now, Lets go global and find those countries has a most highest infection rate compared to their population"
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "04266dc1",
+   "id": "69d13d03",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab6263b",
+   "id": "52d9777f",
    "metadata": {},
    "source": [
     "As we see, Andorra, Montenegro and Czechia has the highest infected cases among 210 countries from world.  \n",
@@ -1302,8 +1302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "ec3729c7",
+   "execution_count": 36,
+   "id": "eed48694",
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
        " ('United Kingdom', 127775.0)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,9 +1373,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f28288b",
+   "metadata": {},
+   "source": [
+    "BREAKING THINGS DOWN BY CONTINENT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5e7719",
+   "metadata": {},
+   "source": [
+    "Lets look at the  contintents with the highest death count per population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0581c496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost:3306/mydatadb\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>continent</th>\n",
+       "            <th>highestDeathCount</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>North America</td>\n",
+       "            <td>576232.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>South America</td>\n",
+       "            <td>403781.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Asia</td>\n",
+       "            <td>211853.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Europe</td>\n",
+       "            <td>127775.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Africa</td>\n",
+       "            <td>54350.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Oceania</td>\n",
+       "            <td>910.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('North America', 576232.0),\n",
+       " ('South America', 403781.0),\n",
+       " ('Asia', 211853.0),\n",
+       " ('Europe', 127775.0),\n",
+       " ('Africa', 54350.0),\n",
+       " ('Oceania', 910.0)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT continent, Max(total_deaths) highestDeathCount\n",
+    "FROM covid_deaths\n",
+    "WHERE continent is not null\n",
+    "Group by Continent\n",
+    "Order by highestDeathCount DESC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d98176b",
+   "metadata": {},
+   "source": [
+    "Global Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d718f0ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost:3306/mydatadb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>TotalCase</th>\n",
+       "            <th>TotalDeaths</th>\n",
+       "            <th>TotalDeathPercentage</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>150574977.0</td>\n",
+       "            <td>3180206.0</td>\n",
+       "            <td>2.11</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(150574977.0, 3180206.0, 2.11)]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "Select  Sum(new_cases) as TotalCase, sum(new_deaths) as TotalDeaths, ROUND(sum(new_deaths)/Sum(new_cases)*100, 2) as TotalDeathPercentage\n",
+    "FROM covid_deaths\n",
+    "Where continent is not null\n",
+    "Order by 1, 2;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83c8a93b",
+   "metadata": {},
+   "source": [
+    "Now, Lets look at the vaccine info. At first we'll show the Percentage of Population that has recieved at least one Covid Vaccine.  \n",
+    "\n",
+    "We need to import the vaccine dataset. And then we'll perform JOIN to find out vaccine information.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97fb5af9",
+   "id": "947032e0",
    "metadata": {},
    "outputs": [],
    "source": []
