New vacccincation info added

--- a/Covid-19 Data Exploration in SQL.ipynb
+++ b/Covid-19 Data Exploration in SQL.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0142fb6",
+   "id": "66a9f920",
    "metadata": {},
    "source": [
     "Now we gonna look at the total infected ratio compared to overall population in Bangladesh.  "
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a34220b6",
+   "id": "a6cf48f0",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dc5388c",
+   "id": "5b11c2c3",
    "metadata": {},
    "source": [
     "In above queries we used the condition \"Continenet is not null\" in WHERE statetement is because, If we look at the dataset closely we find that the location column contain 'Africa', 'Asia', 'Europe' as a country. Only when the continent is null. To be more specific and acurate we used \"continent is not null\" in the WHERE statement.\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9e00e1da",
+   "id": "993e546f",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7575a3",
+   "id": "ee2127b3",
    "metadata": {},
    "source": [
     "Now, Lets go global and find those countries has a most highest infection rate compared to their population"
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "69d13d03",
+   "id": "c486e122",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d9777f",
+   "id": "a242d639",
    "metadata": {},
    "source": [
     "As we see, Andorra, Montenegro and Czechia has the highest infected cases among 210 countries from world.  \n",
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "eed48694",
+   "id": "0b2a2ded",
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f28288b",
+   "id": "a06da53d",
    "metadata": {},
    "source": [
     "BREAKING THINGS DOWN BY CONTINENT"
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5e7719",
+   "id": "c3d1057d",
    "metadata": {},
    "source": [
     "Lets look at the  contintents with the highest death count per population"
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0581c496",
+   "id": "c0c9d233",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d98176b",
+   "id": "2ce94143",
    "metadata": {},
    "source": [
     "Global Numbers"
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d718f0ac",
+   "id": "d7c54585",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c8a93b",
+   "id": "078ebdae",
    "metadata": {},
    "source": [
     "Now, Lets look at the vaccine info. At first we'll show the Percentage of Population that has recieved at least one Covid Vaccine.  \n",
@@ -1536,8 +1536,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "7a525491",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost:3306/mydatadb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>continent</th>\n",
+       "            <th>location</th>\n",
+       "            <th>date</th>\n",
+       "            <th>population</th>\n",
+       "            <th>new_vaccinations</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>North America</td>\n",
+       "            <td>Canada</td>\n",
+       "            <td>2020-12-15 00:00:00</td>\n",
+       "            <td>37742157.0</td>\n",
+       "            <td>718.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>None</td>\n",
+       "            <td>World</td>\n",
+       "            <td>2020-12-15 00:00:00</td>\n",
+       "            <td>7794798729.0</td>\n",
+       "            <td>1529218.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>None</td>\n",
+       "            <td>North America</td>\n",
+       "            <td>2020-12-15 00:00:00</td>\n",
+       "            <td>592072204.0</td>\n",
+       "            <td>718.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>None</td>\n",
+       "            <td>World</td>\n",
+       "            <td>2020-12-16 00:00:00</td>\n",
+       "            <td>7794798729.0</td>\n",
+       "            <td>2300.0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>North America</td>\n",
+       "            <td>Canada</td>\n",
+       "            <td>2020-12-16 00:00:00</td>\n",
+       "            <td>37742157.0</td>\n",
+       "            <td>2300.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('North America', 'Canada', datetime.datetime(2020, 12, 15, 0, 0), 37742157.0, 718.0),\n",
+       " (None, 'World', datetime.datetime(2020, 12, 15, 0, 0), 7794798729.0, 1529218.0),\n",
+       " (None, 'North America', datetime.datetime(2020, 12, 15, 0, 0), 592072204.0, 718.0),\n",
+       " (None, 'World', datetime.datetime(2020, 12, 16, 0, 0), 7794798729.0, 2300.0),\n",
+       " ('North America', 'Canada', datetime.datetime(2020, 12, 16, 0, 0), 37742157.0, 2300.0)]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT death.continent, death.location, death.date, death.population, Vac.new_vaccinations\n",
+    "FROM covid_deaths death\n",
+    "join Covid_vaccinations Vac\n",
+    "    on death.location = Vac.location \n",
+    "    and death.date = vac.date \n",
+    "Where death.location is not null AND Vac.new_vaccinations is not null\n",
+    "Order by 3\n",
+    "LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce7c023",
+   "metadata": {},
+   "source": [
+    "As table shown, the first ever Covid19 vaccine in 2020 was given on 15th December 2020 in CANADA. Total 718 people was vaccinated that day. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "947032e0",
+   "id": "a75771ff",
    "metadata": {},
    "outputs": [],
    "source": []
