vaccine info added

--- a/Covid-19 Data Exploration in SQL.ipynb
+++ b/Covid-19 Data Exploration in SQL.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a9f920",
+   "id": "a621ca22",
    "metadata": {},
    "source": [
     "Now we gonna look at the total infected ratio compared to overall population in Bangladesh.  "
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a6cf48f0",
+   "id": "0a697f13",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b11c2c3",
+   "id": "88cefd87",
    "metadata": {},
    "source": [
     "In above queries we used the condition \"Continenet is not null\" in WHERE statetement is because, If we look at the dataset closely we find that the location column contain 'Africa', 'Asia', 'Europe' as a country. Only when the continent is null. To be more specific and acurate we used \"continent is not null\" in the WHERE statement.\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "993e546f",
+   "id": "76ab9b73",
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee2127b3",
+   "id": "f381cb51",
    "metadata": {},
    "source": [
     "Now, Lets go global and find those countries has a most highest infection rate compared to their population"
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c486e122",
+   "id": "cd84c585",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a242d639",
+   "id": "4e9017a0",
    "metadata": {},
    "source": [
     "As we see, Andorra, Montenegro and Czechia has the highest infected cases among 210 countries from world.  \n",
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0b2a2ded",
+   "id": "b7bdf3dd",
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a06da53d",
+   "id": "fd5790bf",
    "metadata": {},
    "source": [
     "BREAKING THINGS DOWN BY CONTINENT"
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d1057d",
+   "id": "667d5484",
    "metadata": {},
    "source": [
     "Lets look at the  contintents with the highest death count per population"
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c0c9d233",
+   "id": "f569b310",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce94143",
+   "id": "8456ee44",
    "metadata": {},
    "source": [
     "Global Numbers"
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d7c54585",
+   "id": "85f66c04",
    "metadata": {},
    "outputs": [
     {
@@ -1526,18 +1526,310 @@
   },
   {
    "cell_type": "markdown",
-   "id": "078ebdae",
+   "id": "216d2f75",
    "metadata": {},
    "source": [
-    "Now, Lets look at the vaccine info. At first we'll show the Percentage of Population that has recieved at least one Covid Vaccine.  \n",
     "\n",
-    "We need to import the vaccine dataset. And then we'll perform JOIN to find out vaccine information.  "
+    "We need to import the vaccine dataset. And then we'll perform JOIN to find out vaccine information. Lets have a quick look on the vaccin data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1c83e3c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@localhost:3306/mydatadb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>index</th>\n",
+       "            <th>iso_code</th>\n",
+       "            <th>continent</th>\n",
+       "            <th>location</th>\n",
+       "            <th>date</th>\n",
+       "            <th>new_tests</th>\n",
+       "            <th>total_tests</th>\n",
+       "            <th>total_tests_per_thousand</th>\n",
+       "            <th>new_tests_per_thousand</th>\n",
+       "            <th>new_tests_smoothed</th>\n",
+       "            <th>new_tests_smoothed_per_thousand</th>\n",
+       "            <th>positive_rate</th>\n",
+       "            <th>tests_per_case</th>\n",
+       "            <th>tests_units</th>\n",
+       "            <th>total_vaccinations</th>\n",
+       "            <th>people_vaccinated</th>\n",
+       "            <th>people_fully_vaccinated</th>\n",
+       "            <th>new_vaccinations</th>\n",
+       "            <th>new_vaccinations_smoothed</th>\n",
+       "            <th>total_vaccinations_per_hundred</th>\n",
+       "            <th>people_vaccinated_per_hundred</th>\n",
+       "            <th>people_fully_vaccinated_per_hundred</th>\n",
+       "            <th>new_vaccinations_smoothed_per_million</th>\n",
+       "            <th>stringency_index</th>\n",
+       "            <th>population_density</th>\n",
+       "            <th>median_age</th>\n",
+       "            <th>aged_65_older</th>\n",
+       "            <th>aged_70_older</th>\n",
+       "            <th>gdp_per_capita</th>\n",
+       "            <th>extreme_poverty</th>\n",
+       "            <th>cardiovasc_death_rate</th>\n",
+       "            <th>diabetes_prevalence</th>\n",
+       "            <th>female_smokers</th>\n",
+       "            <th>male_smokers</th>\n",
+       "            <th>handwashing_facilities</th>\n",
+       "            <th>hospital_beds_per_thousand</th>\n",
+       "            <th>life_expectancy</th>\n",
+       "            <th>human_development_index</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0</td>\n",
+       "            <td>AFG</td>\n",
+       "            <td>Asia</td>\n",
+       "            <td>Afghanistan</td>\n",
+       "            <td>2020-02-24 00:00:00</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>8.33</td>\n",
+       "            <td>54.422</td>\n",
+       "            <td>18.6</td>\n",
+       "            <td>2.581</td>\n",
+       "            <td>1.337</td>\n",
+       "            <td>1803.987</td>\n",
+       "            <td>None</td>\n",
+       "            <td>597.029</td>\n",
+       "            <td>9.59</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>37.746</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>64.83</td>\n",
+       "            <td>0.511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>AFG</td>\n",
+       "            <td>Asia</td>\n",
+       "            <td>Afghanistan</td>\n",
+       "            <td>2020-02-25 00:00:00</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>8.33</td>\n",
+       "            <td>54.422</td>\n",
+       "            <td>18.6</td>\n",
+       "            <td>2.581</td>\n",
+       "            <td>1.337</td>\n",
+       "            <td>1803.987</td>\n",
+       "            <td>None</td>\n",
+       "            <td>597.029</td>\n",
+       "            <td>9.59</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>37.746</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>64.83</td>\n",
+       "            <td>0.511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>AFG</td>\n",
+       "            <td>Asia</td>\n",
+       "            <td>Afghanistan</td>\n",
+       "            <td>2020-02-26 00:00:00</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>8.33</td>\n",
+       "            <td>54.422</td>\n",
+       "            <td>18.6</td>\n",
+       "            <td>2.581</td>\n",
+       "            <td>1.337</td>\n",
+       "            <td>1803.987</td>\n",
+       "            <td>None</td>\n",
+       "            <td>597.029</td>\n",
+       "            <td>9.59</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>37.746</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>64.83</td>\n",
+       "            <td>0.511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>AFG</td>\n",
+       "            <td>Asia</td>\n",
+       "            <td>Afghanistan</td>\n",
+       "            <td>2020-02-27 00:00:00</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>8.33</td>\n",
+       "            <td>54.422</td>\n",
+       "            <td>18.6</td>\n",
+       "            <td>2.581</td>\n",
+       "            <td>1.337</td>\n",
+       "            <td>1803.987</td>\n",
+       "            <td>None</td>\n",
+       "            <td>597.029</td>\n",
+       "            <td>9.59</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>37.746</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>64.83</td>\n",
+       "            <td>0.511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>AFG</td>\n",
+       "            <td>Asia</td>\n",
+       "            <td>Afghanistan</td>\n",
+       "            <td>2020-02-28 00:00:00</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>8.33</td>\n",
+       "            <td>54.422</td>\n",
+       "            <td>18.6</td>\n",
+       "            <td>2.581</td>\n",
+       "            <td>1.337</td>\n",
+       "            <td>1803.987</td>\n",
+       "            <td>None</td>\n",
+       "            <td>597.029</td>\n",
+       "            <td>9.59</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>37.746</td>\n",
+       "            <td>0.5</td>\n",
+       "            <td>64.83</td>\n",
+       "            <td>0.511</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(0, 'AFG', 'Asia', 'Afghanistan', datetime.datetime(2020, 2, 24, 0, 0), None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 8.33, 54.422, 18.6, 2.581, 1.337, 1803.987, None, 597.029, 9.59, None, None, 37.746, 0.5, 64.83, 0.511),\n",
+       " (1, 'AFG', 'Asia', 'Afghanistan', datetime.datetime(2020, 2, 25, 0, 0), None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 8.33, 54.422, 18.6, 2.581, 1.337, 1803.987, None, 597.029, 9.59, None, None, 37.746, 0.5, 64.83, 0.511),\n",
+       " (2, 'AFG', 'Asia', 'Afghanistan', datetime.datetime(2020, 2, 26, 0, 0), None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 8.33, 54.422, 18.6, 2.581, 1.337, 1803.987, None, 597.029, 9.59, None, None, 37.746, 0.5, 64.83, 0.511),\n",
+       " (3, 'AFG', 'Asia', 'Afghanistan', datetime.datetime(2020, 2, 27, 0, 0), None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 8.33, 54.422, 18.6, 2.581, 1.337, 1803.987, None, 597.029, 9.59, None, None, 37.746, 0.5, 64.83, 0.511),\n",
+       " (4, 'AFG', 'Asia', 'Afghanistan', datetime.datetime(2020, 2, 28, 0, 0), None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 8.33, 54.422, 18.6, 2.581, 1.337, 1803.987, None, 597.029, 9.59, None, None, 37.746, 0.5, 64.83, 0.511)]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "\n",
+    "SELECT *\n",
+    "FROM covid_vaccinations\n",
+    "limit 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5957f825",
+   "metadata": {},
+   "source": [
+    "Now, Lets look at the new vaccine info. we'll show see the number of vaccination was given in the very first day and we'll also see the location.  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7a525491",
+   "id": "5826037e",
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce7c023",
+   "id": "6d5f6ab5",
    "metadata": {},
    "source": [
     "As table shown, the first ever Covid19 vaccine in 2020 was given on 15th December 2020 in CANADA. Total 718 people was vaccinated that day. "
@@ -1637,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a75771ff",
+   "id": "d9c7821e",
    "metadata": {},
    "outputs": [],
    "source": []
